remove yarn dedupe

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
             - dependency-cache-
       - run:
           name: Install dependencies
-          command: yarn install
+          command: yarn install --immutable
       - save_cache:
           key: dependency-cache-{{ checksum "package.json" }}-{{ checksum "yarn.lock" }}
           paths:
@@ -35,18 +35,6 @@ jobs:
       - run:
           name: Check linters
           command: yarn lint
-
-  check-lockfile:
-    <<: *defaults
-    steps:
-      - attach_workspace:
-          at: .
-      - run:
-          name: Run lockfile linter
-          command: yarn lockfile-lint -p yarn.lock
-      - run:
-          name: Check for duplicate dependencies
-          command: yarn yarn-deduplicate -f -l
 
   maybe_deploy:
     # Tag filtering in CircleCI is unreliable - this is hacky, but it works
@@ -70,10 +58,6 @@ workflows:
       - lint:
           requires:
             - setup
-      - check-lockfile:
-          requires:
-            - setup
       - maybe_deploy:
           requires:
             - lint
-            - check-lockfile
