--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "eslint": "^8.0.0",
     "lockfile-lint": "^4.6.2",
     "prettier": "^3.0.0",
-    "typescript": ">=3.3.1 <5.1.0",
-    "yarn-deduplicate": "^6.0.2"
+    "typescript": ">=3.3.1 <5.1.0"
   },
   "packageManager": "yarn@3.6.4"
 }
