--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "peerDependencies": {
     "eslint": ">=7.0.0 <9.0.0",
-    "typescript": ">=3.3.1 <5.1.0"
+    "typescript": ">=3.3.1"
   },
   "dependencies": {
     "@eslint/js": "^8.50.0",
@@ -24,12 +24,12 @@
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.0",
-    "prettier": ">=3.0.0 <4.0.0"
+    "prettier": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^8.0.0",
     "prettier": "^3.0.0",
-    "typescript": ">=3.3.1 <5.1.0"
+    "typescript": ">=3.3.1"
   },
   "packageManager": "yarn@3.6.4"
 }
