--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,2 @@
-# Dependencies
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
-
+node_modules/
 build/
