--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "prettier": "^3.4.2"
   },
   "devDependencies": {
-    "eslint": "^9.17.0",
-    "prettier": "^3.0.0",
-    "typescript": "^5.7.2"
+    "eslint": ">=8.0.0 <10.0.0",
+    "typescript": ">=3.3.1"
   }
 }
