--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["markormesher/renovate-config"]
+  "extends": [
+    "local>markormesher/renovate-config"
+  ]
 }
