--- a/package.json
+++ b/package.json
@@ -15,12 +15,8 @@
   "scripts": {
     "lint": "eslint ./"
   },
-  "peerDependencies": {
-    "eslint": ">=10.0.0 <11.0.0",
-    "typescript": ">=3.3.1"
-  },
   "dependencies": {
-    "@eslint/js": "^10.0.1",
+    "@eslint/js": "^9.39.2",
     "@typescript-eslint/eslint-plugin": "^8.55.0",
     "@typescript-eslint/parser": "^8.55.0",
     "eslint-config-prettier": "^10.1.8",
@@ -31,8 +27,12 @@
     "prettier": "^3.8.1"
   },
   "devDependencies": {
-    "eslint": "10.0.0",
-    "typescript": "5.9.3"
+    "eslint": "^9.39.2",
+    "typescript": "^5.9.3"
+  },
+  "peerDependencies": {
+    "eslint": "^9.0.0",
+    "typescript": ">=3.3.1"
   },
   "packageManager": "pnpm@10.29.1"
 }
